cabal-version: 2.2

name:        escher
version:     0.1.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/escher
license:     ISC
copyright:   2021 Evan Relf


library
  build-depends:
      base
    , aeson
    , bytestring
    , cereal
    , leb128-cereal
    , network
    , network-run
    , text
    , zlib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
  hs-source-dirs: src
  exposed-modules:
      Escher
    , Escher.Packets
    , Escher.Types
