cabal-version: 2.2

name:        escher
version:     0.1.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/escher
license:     ISC
copyright:   2021 Evan Relf

tested-with: GHC == 8.10.4

common common
  build-depends: base < 5.0
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  build-depends:
    , aeson
    , base
    , bytestring
    , cereal
    , cereal-text
    , leb128-cereal
    , mtl
    , network
    , network-run
    , text
    , zlib
  hs-source-dirs: src
  exposed-modules:
    Escher
    Escher.Packets
    Escher.Types

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , bytestring
    , cereal
    , escher
    , tasty
    , tasty-hunit
